--- a/bugquery/list.html
+++ b/bugquery/list.html
@@ -80,6 +80,7 @@
       </table>
   
       <div style="padding:1px 25px 5px 5px ;"><div id="errorlist" ></div> </div>
+      <div style="padding:1px 25px 5px 5px ;"><button type="button" id="export">Export As Excel</button></div>
      	   	   	   	             
     </div>
 
